Unit3 Project done

--- a/frontend/drnk-jamz/public/index.html
+++ b/frontend/drnk-jamz/public/index.html
@@ -28,7 +28,7 @@
     <!-- <script src="https://sdk.scdn.co/spotify-player.js"></script> -->
     <!-- <script src="./scripts/loadSpotifyScript.js" defer></script> -->
     <script src="./scripts/MusicStoryAPI.class.min.js"></script>
-    <title>DRNKJAMZ</title>
+    <title>DRNKJMZ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
